fase-2/auth-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: tech-challenge-fase-2
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
